# gamecoy

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Taskfile.yml  cffi_wrapper.py
include/: alu.h  bit_shift.h  bitflag.h  bitwise.h  cpu.h  decoder.h  executor.h  instructions.h  jumps.h  misc.h  mmu.h  util.h
src/: alu.c  bit_shift.c  bitflag.c  bitwise.c  cpu.c  decoder.c  executor.c  jumps.c  misc.c  mmu.c  util.c
tests/: json_tests.cpp  test_instructions.py
tests/include/: test_utils.hpp
tests/src/: cpu_tests.cpp  test_utils.cpp
